2011-11-02  6.7.3-3 Cristy  <quetzlzacatenango@image...>
  * Fix small memory leak in the TIFF coder.

2011-11-01  6.7.3-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-2, SVN revision 5718

2011-11-01  6.7.3-2 Cristy  <quetzlzacatenango@image...>
  * Support Ghostscript under 64-bit Windows (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19659).
  * Correct affine translation for certain SVG files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19664).
  * -evaluate-sequence multiply no longer hangs ereference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19549).

2011-10-15  6.7.3-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-1.

2011-10-15  6.7.3-1 Cristy  <quetzlzacatenango@image...>
  * Read TIFF EXIF profile before reading the image data.
  * Fix "test: no: unexpected operator" in the configure script (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19615).
  * Off by one error when writing the JPEG XMP profile (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19616).
  * Revert GetPathComponent() patch.

2011-10-09  6.7.3-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-0.

2011-10-09  6.7.3-0 Cristy  <quetzlzacatenango@image...>
  * Generate output for caption:"[!]" (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19589.

2011-10-05  6.7.3-0 Glenn Randers-Pehrson <glennrp@image...>
  * Add "png:format" property with possible values png8, png24, and png32,
    for use when prepending the format type to the filename is not convenient
    or is not possible, e.g., when embedding the PNG in a PNG-encoded ICO.

2011-10-04  6.7.2-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-10.

2011-10-04  6.7.2-10 Cristy  <quetzlzacatenango@image...>
  * Remove most of the LLVM compiler warnings.
  * Fix bug in -evaluate-sequence multiply (reference