@@ -1,5 +1,6 @@
 2011-11-02  6.7.3-3 Cristy  <quetzlzacatenango@image...>
   * Fix small memory leak in the TIFF coder.
+  * Support -debug accelerate option.
 
 2011-11-01  6.7.3-2 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.3-2, SVN revision 5718
